# agno-agentos-starter

./: .dockerignore  .gitignore  Dockerfile  README.md  example.env  pyproject.toml
agents/: __init__.py  registry.py  starter_agent.py
app/: __init__.py  config.yaml  main.py  settings.py
charts/agno-agentos-starter/: Chart.yaml  values.yaml
charts/agno-agentos-starter/templates/: NOTES.txt  _helpers.tpl  deployment-frontend.yaml  deployment.yaml  gateway.yaml  httproute.yaml  ingress-frontend.yaml  ingress.yaml  secret.yaml  service-frontend.yaml  service.yaml  serviceaccount.yaml
db/: __init__.py  session.py  url.py
ui/: Dockerfile  next.config.ts  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/approvals/: page.tsx
ui/app/chat/: page.tsx
ui/app/evaluation/: page.tsx
ui/app/knowledge/: page.tsx
ui/app/memory/: page.tsx
ui/app/metrics/: page.tsx
ui/app/schedules/: page.tsx
ui/app/sessions/: page.tsx
ui/app/settings/: page.tsx
ui/app/teams/: page.tsx
ui/app/traces/: page.tsx
ui/app/workflows/: page.tsx
ui/components/: app-sidebar.tsx  header.tsx
ui/lib/: api.ts
